<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-51dp"
        tools:layout_editor_absoluteY="-334dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textoFormulario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textoFormulario"
                android:textAlignment="textStart"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSexo"
                android:layout_width="56dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/textViewSexo" />

            <EditText
                android:id="@+id/editTextSexo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/editTextSexo"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewEdad"
                android:layout_width="56dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/textViewEdad" />

            <EditText
                android:id="@+id/editTextEdad"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/editTextEdad"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAltura"
                android:layout_width="56dp"
                android:layout_height="60dp"
                android:layout_gravity="left"
                android:gravity="center"
                android:text="@string/textViewAltura" />

            <EditText
                android:id="@+id/editTextAltura"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/editTextAltura"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPeso"
                android:layout_width="56dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/textViewPeso" />

            <EditText
                android:id="@+id/editTextPeso"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/editTextPeso"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnContinuar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnContinuar" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>