<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoEjercicioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/AñadirNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/AñadirNombre"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/AñadirDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/AñadirDescripcion"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/AñadirTiempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/AñadirTiempo"
            android:inputType="text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/AñadirEjercicioBD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Insertar" />
    </LinearLayout>

</LinearLayout>